[workspace]
members = ["repl_cli"]


[workspace.dependencies]
anyhow = "1.0.86"
arrow = { version = "53.0.0", features = ["prettyprint"] }
aws-lc-sys = "0.21.2"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
clickhouse = { version = "0.12.2", features = ["inserter", "rustls-tls"] }
cmake = "0.1.51"
console = "0.15.8"
console-subscriber = "0.4.0"
csv = "1.3.0"
datafusion = { version = "42.0.0", features = ["serde"] }
duckdb = "1.0.0"
futures-util = "0.3.30"
indicatif = "0.17.8"
klickhouse = { version = "=0.13.1", features = ["bb8"] }
log = "0.4.22"
env_logger = "0.9"
polars = { version = "0.43.1", features = ["parquet", "timezones", "sql", "lazy", "polars-io"] }
rand = "0.8.5"
rand_core = "0.6.4"
reedline-repl-rs = "1.2.1"
rustls = { version = "0.23.13", features = ["ring"] }
##serde = "1.0.209"
serde = { version = "1.0", features = ["derive"] }

# serde_json is just for the example, not required in general
serde_json = "1.0"
serde_toml = "0.0.1"
serde_yaml = "0.9.33"
sha2 = "0.10.8"
sqlx = { version = "0.8.2", features = ["mysql", "runtime-tokio-rustls"] }
tokio = { version = "1.40.0", features = ["full", "tracing"] }
toml = "0.8.19"
bb8 = "0.8.5"
parquet = "53.0.0"

