[package]
name = "repl_cli"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"
arrow = { version = "53.0.0", features = ["prettyprint"] }
aws-lc-sys = "0.21.2"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
clickhouse = { version = "0.12.2", features = ["inserter", "rustls-tls"] }
cmake = "0.1.51"
console = "0.15.8"
console-subscriber = "0.4.0"
csv = "1.3.0"

